# Autonomous_robot_raspberry_pi

./: README.md  frames.gv
arduino_ros/: arduino_ros.ino
ommp_bringup/: CMakeLists.txt  package.xml
ommp_bringup/config/: ekf_localization.yaml
ommp_bringup/config/start/: odom_encoder_params.yaml  rf2o_laser_odometry_params.yaml  serial_params.yaml
ommp_bringup/launch/: main.launch  motor_driver.launch  real_bringup.launch  robot_cmd_bringup.launch  sensor_fusion.launch  sim_bringup.launch
ommp_bringup/src/: cmd_vel_mux.cpp  diff_tf.cpp
ommp_navigation/launch/include/: gmapping.launch  move_base.launch
ommp_navigation/maps/: custom.pgm  custom.yaml  custom_map.pgm  custom_map.yaml
ommp_navigation/params/: costmap_common_params.yaml  move_base_params.yaml
ommp_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
robot_mapping/: CMakeLists.txt  package.xml
robot_mapping/launch/: .gmapping_main.launch.swp  gmapping_main.launch
robot_mapping/launch/include/: gmapping.launch
robot_mapping/map/: mymap.pgm  mymap.yaml
